add modem live polling
