# internal/types/modemdata.go
@@ -5,21 +5,21 @@ import (
 )
 
 type ModemData struct {
-	Sysdescr        string
-	Hostname        string
-	QueryTime       int64
-	Timestamp       int64
-	DownStreams     []DownstreamChannel
-	UpStreams       []UpstreamChannel
-	Mac             net.HardwareAddr
-	CmtsDbId        int32
-	DbModemId       uint64
-	Err             error
-	Errors          []string `json:"errors"`
-	SnmpIndex       int32
-	DocsisVersion   uint32
-	DSPrimary       int32
-	OfdmDownstreams *OfdmDownstreamHistory
+	Sysdescr        string                 `json:"sysdescr"`
+	Hostname        string                 `json:"hostname"`
+	QueryTime       int64                  `json:"query_time_ns"`
+	Timestamp       int64                  `json:"timestamp"`
+	DownStreams     []DownstreamChannel    `json:"ds,omitempty"`
+	UpStreams       []UpstreamChannel      `json:"us,omitempty"`
+	Mac             net.HardwareAddr       `json:"-"`
+	CmtsDbId        int32                  `json:"-"`
+	DbModemId       uint64                 `json:"-"`
+	Err             error                  `json:"err,omitempty"`
+	SnmpIndex       int32                  `json:"-"`
+	DocsisVersion   uint32                 `json:"docsis_version"`
+	DSPrimary       int32                  `json:"ds_primary"`
+	OfdmDownstreams *OfdmDownstreamHistory `json:"-"`
+	Uptime          uint32                 `json:"uptime"`
 }
 
 type ModemPollRequest struct {
