# internal/types/modemdownstream.go
@@ -1,20 +1,20 @@
 package types
 
 type DownstreamChannel struct {
-	ID             int32 `json:"-"`
-	Freq           int32 `json:"freq"`
-	Power          int32 `json:"pwr"`
-	SNR            int32 `json:"snr"`
-	Microrefl      int32 `json:"mrefl"`
+	ID             int32  `json:"-"`
+	Freq           int32  `json:"freq"`
+	Power          int32  `json:"pwr"`
+	SNR            int32  `json:"snr"`
+	Microrefl      int32  `json:"mrefl"`
 	Unerroreds     uint64 `json:"unerr"`
 	Correcteds     uint64 `json:"corr"`
 	Uncorrectables uint64 `json:"err"`
-	Index          int `json:"-"`
-	Modulation     int32 `json:"mod"`
+	Index          int    `json:"snmp_index,omitempty"`
+	Modulation     int32  `json:"mod"`
 }
 
 type DownstreamChannelHistory struct {
-	Timestamp   int64 `json:"ts"`
+	Timestamp   int64                `json:"ts"`
 	Downstreams []*DownstreamChannel `json:"ds"`
 }
 
@@ -24,7 +24,6 @@ type OfdmDownstreamHistory struct {
 }
 
 type OfdmDownstreamChannelProfileData struct {
-//	ProfileId        uint32
 	ChangeCount      uint32
 	CwTotal          uint64
 	CwCorrected      uint64
